[package]
name = "soulframe-language-downloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "download"
path = "src/bin/download.rs"

[[bin]]
name = "extract"
path = "src/bin/extract.rs"

[dependencies]
# HTTP client for downloading files
reqwest = { version = "0.12", features = ["blocking"] }
# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }
# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
# Compression
zstd = "0.13"
# Hashing
md5 = "0.7"
crc32c = "0.6"
# Base64 encoding/decoding
base64 = "0.22"
# Random number generation
rand = "0.8"
# Path manipulation
path-absolutize = "3.0"
# Directory creation
fs_extra = "1.3"
# Byte manipulation
byteorder = "1.5"

[dependencies.libloading]
version = "0.8"

[build-dependencies]
cc = "1.0"